--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
 
       entrance: {
         name: "玄関",
-        img: "entrance1.jpg",
-        video: "Movie_entrance1.mp4",
+        img: "genkan1.png",
+        video: "Movie_genkan1.mp4",
         quiz: [
           {
             text: "【発見力】玄関で地震時に危険になりやすい場所はどれ？",
@@ -336,3 +336,4 @@
   </script>
 </body>
 </html>
+
